[gd_scene load_steps=46 format=2]

[ext_resource path="res://assets/art/human/human_idle_nohat.png" type="Texture" id=1]
[ext_resource path="res://scripts/Human.gd" type="Script" id=2]
[ext_resource path="res://assets/art/floors-walls-garden/garden/red_apple.png" type="Texture" id=3]
[ext_resource path="res://assets/art/human/human_walk_hat.png" type="Texture" id=4]
[ext_resource path="res://assets/art/human/human_idle.png" type="Texture" id=5]
[ext_resource path="res://assets/art/human/human_walk_nohat.png" type="Texture" id=6]

[sub_resource type="CapsuleShape" id=1]
height = 5.4918

[sub_resource type="AtlasTexture" id=8]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=9]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 7, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=10]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 14, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=11]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 21, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 28, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=13]
flags = 3
atlas = ExtResource( 1 )
region = Rect2( 35, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=25]
flags = 3
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=26]
flags = 3
atlas = ExtResource( 5 )
region = Rect2( 7, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=27]
flags = 3
atlas = ExtResource( 5 )
region = Rect2( 14, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=28]
flags = 3
atlas = ExtResource( 5 )
region = Rect2( 21, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=29]
flags = 3
atlas = ExtResource( 5 )
region = Rect2( 28, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=30]
flags = 3
atlas = ExtResource( 5 )
region = Rect2( 35, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=14]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=15]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 7, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=16]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 14, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=17]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 21, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=18]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 28, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=19]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 35, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=20]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 42, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=21]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 49, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=22]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 56, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=23]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 63, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=24]
flags = 3
atlas = ExtResource( 4 )
region = Rect2( 70, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=31]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=32]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 7, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=33]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 14, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=34]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 21, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=35]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 28, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=36]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 35, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=37]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 42, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=38]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 49, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=39]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 56, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=40]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 63, 0, 7, 16 )

[sub_resource type="AtlasTexture" id=41]
flags = 3
atlas = ExtResource( 6 )
region = Rect2( 70, 0, 7, 16 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "IdleHat",
"speed": 10.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ) ],
"loop": true,
"name": "WalkHat",
"speed": 15.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ), SubResource( 38 ), SubResource( 39 ), SubResource( 40 ), SubResource( 41 ) ],
"loop": true,
"name": "Walk",
"speed": 15.0
} ]

[sub_resource type="SpatialMaterial" id=42]
flags_transparent = true
flags_unshaded = true
params_billboard_mode = 3
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=43]
material = SubResource( 42 )

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0.0289855, 0 ), 0.0, 0.0, 0, 0, Vector2( 0.454106, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.888889, 0 ), 0.0, 0.0, 0, 0 ]

[node name="Human" type="KinematicBody"]
collision_layer = 2
collision_mask = 77
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="AnimatedSprite3D" type="AnimatedSprite3D" parent="."]
transform = Transform( 50, 0, 0, 0, 50, 0, 0, 0, 1, 0, 0, 0 )
billboard = 2
frames = SubResource( 2 )
animation = "IdleHat"
frame = 2
playing = true

[node name="Area" type="Area" parent="."]
collision_layer = 34
collision_mask = 64

[node name="CollisionShape" type="CollisionShape" parent="Area"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="StunTimer" type="Timer" parent="."]
one_shot = true

[node name="StunParticles" type="CPUParticles" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.66298, 0 )
emitting = false
amount = 20
lifetime = 0.5
one_shot = true
explosiveness = 0.55
mesh = SubResource( 43 )
spread = 180.0
gravity = Vector3( 0, 1, 0 )
initial_velocity = 10.0
initial_velocity_random = 0.79
angle_random = 0.38
scale_amount_curve = SubResource( 5 )

[connection signal="area_entered" from="Area" to="." method="_on_Area_area_entered"]
[connection signal="timeout" from="StunTimer" to="." method="_on_StunTimer_timeout"]
